--- a/bio.html
+++ b/bio.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sit 2C Montale</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <header>
-<h1> Myself</h1>
+         <header class="intestazione">
+        <h1> Myself</h1>
             <nav>
-            <a href="index.html">home</a>
-            <a href="bio.html">biografie</a>
-            <a href="tavola.html">tavola</a>
+            <a class="link-navigazione" href="index.html">home</a>
+            <a class="link-navigazione" href="bio.html">biografie</a>
+            <a class="link-navigazione" href="tavola.html">tavola</a>
             
             </nav>
         </header>
